chore(engine): fix engine tests
 Based on not writting job activated record tests are adjusted